style.css
/* ... */
/* Flex */
.flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

/* Outline none */
*,
*:focus,
*:active {
  outline: none;
}

.clearfix:after,
div#song-options div#song-info:after,
div#header:after {
  content: "";
  display: table;
  clear: both;
}

body {
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  background: #cba28f;
  -webkit-transition: background 0.25s ease;
  -moz-transition: background 0.25s ease;
  -ms-transition: background 0.25s ease;
  -o-transition: background 0.25s ease;
  transition: background 0.25s ease;
}

.svg path {
  fill: white;
}

h3 {
  cursor: default;
  font-weight: 600;
  font-size: 12px;
  letter-spacing: 1px;
  margin: 0 0 15px;
  text-transform: uppercase;
}

p {
  cursor: default;
}
p.info-text {
  color: #b3b3b3;
  font-size: 10px;
}

.fa.add {
  position: relative;
}
.fa.add::after {
  background: #444444;
  border-radius: 100px;
  content: "";
  font-size: 10px;
  left: 2px;
  position: absolute;
  top: -1px;
  width: 10px;
  height: 11px;
}

div#iphone {
  background: #121212;
  border: 1px solid #c0c0c0;
  border-radius: 32px;
  max-width: 230.76px;
  padding: 8px;
  -webkit-box-shadow: 0px 10px 25px rgba(51, 51, 51, 0.3);
  -moz-box-shadow: 0px 10px 25px rgba(51, 51, 51, 0.3);
  box-shadow: 0px 10px 25px rgba(51, 51, 51, 0.3);
  position: relative;
}

div#iphone div#camera span:nth-child(1) {
  border-radius: 10px;
  height: 13px;
  width: 45px;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  background-color: #121212;
  z-index: 99;
  top: 15px;
}
div#iphone div#camera #headerTime {
  position: absolute;
  z-index: 100;
  font-size: 0.7rem;
  left: 45px;
  top: 17px;
}

div#iphone div#camera .signal {
  width: 15px;
  position: absolute;
  right: 70px;
  top: 15px;
  z-index: 100;
  width: 12px;
}

div#iphone div#camera .wifi {
  position: absolute;
  right: 50px;
  top: 15px;
  z-index: 100;
  width: 12px;
}

div#iphone div#camera .battery {
  position: absolute;
  right: 28px;
  top: 13px;
  z-index: 100;
  width: 16px;
}

div#iphone div#screen {
  background: #666666;
  border-radius: 28px;
  height: 450px;
  overflow: hidden;
  position: relative;
  width: 225px;
  z-index: 1;
}
div#iphone div#screen::after {
  background: gray;
  content: "";
  display: block;
  height: 130%;
  left: 60%;
  opacity: 0.15;
  position: absolute;
  pointer-events: none;
  top: -25%;
  width: 100%;
  -moz-transform: rotate(-20deg);
  -o-transform: rotate(-20deg);
  -ms-transform: rotate(-20deg);
  -webkit-transform: rotate(-20deg);
  transform: rotate(-20deg);
}

div#content-wrap {
  background: #333;
  height: 100%;
  overflow: hidden;
  position: relative;
  z-index: 5;
  -webkit-transition: transform 0.25s ease;
  -moz-transition: transform 0.25s ease;
  -ms-transition: transform 0.25s ease;
  -o-transition: transform 0.25s ease;
  transition: transform 0.25s ease;
}
div#content-wrap.minimized {
  -moz-transform: scale(0);
  -o-transform: scale(0);
  -ms-transform: scale(0);
  -webkit-transform: scale(0);
  transform: scale(0);
}
div#content-wrap.inactive {
  -moz-transform: scale(0.85) translate(0, 60%);
  -o-transform: scale(0.85) translate(0, 60%);
  -ms-transform: scale(0.85) translate(0, 60%);
  -webkit-transform: scale(0.85) translate(0, 60%);
  transform: scale(0.85) translate(0, 60%);
}
div#content-wrap.inactive div#overlay {
  display: block;
}

div#overlay {
  cursor: pointer;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 3;
}
div#content {
  padding: 15px;
  position: relative;
  z-index: 2;
  padding-bottom: 0;
  padding-top: 30px;
}

div#background {
  background-size: cover;
  background-position: center;
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
  -webkit-filter: blur(10px);
  -moz-filter: blur(10px);
  -ms-filter: blur(10px);
  -o-filter: blur(10px);
  filter: blur(10px);
  -webkit-transition: background-image 0.25s ease;
  -moz-transition: background-image 0.25s ease;
  -ms-transition: background-image 0.25s ease;
  -o-transition: background-image 0.25s ease;
  transition: background-image 0.25s ease;
}
div#background::before {
  background: #333;
  content: "";
  display: block;
  height: 100%;
  opacity: 0.5;
  position: absolute;
  width: 100%;
}
div#background::after {
  content: "";
  display: block;
  height: 100%;
  position: absolute;
  width: 100%;
  background: rgba(0, 0, 0, 0);
  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 50%, #323232 100%);
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, #323232 100%);
}

div#header {
  color: white;
}
div#header span {
  cursor: pointer;
  font-size: 20px;
}
div#header span .svg {
  height: 16px;
  width: 16px;
}
div#header span#menu-btn {
  float: left;
}
div#header span#options-btn {
  float: right;
}

div.jcarousel {
  left: -15px;
  width: calc(100% + 30px);
  position: relative;
  overflow: hidden;
}
div.jcarousel ul#songs {
  width: 20000em;
  position: relative;
}
div.jcarousel ul#songs li.song {
  float: left;
  margin: 10px 15px;
  margin-top: 15px;
  text-align: center;
  width: calc(225px - 30px);
}
div.jcarousel ul#songs li.song img {
  width: 92.5%;
  -webkit-box-shadow: 0px 5px 25px rgba(50, 50, 50, 0.5);
  -moz-box-shadow: 0px 5px 25px rgba(50, 50, 50, 0.5);
  box-shadow: 0px 5px 25px rgba(50, 50, 50, 0.5);
  border-radius: 8px;
  height: 190px;
  object-fit: cover;
  object-position: center;
}
div.jcarousel ul#songs li.song p {
  color: white;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
}
div.jcarousel ul#songs li.song p.song-title {
  font-size: 0.8rem;
  font-weight: 600;
  margin: 10px 0 5px;
}
div.jcarousel ul#songs li.song p.song-artist {
  color: #b3b3b3;
  font-size: 12px;
  margin: 0;
}
/* ... */

